--- a/liquid/templates/registration/login.html
+++ b/liquid/templates/registration/login.html
@@ -20,7 +20,9 @@
   <p>Don't have an LDAP password? Run this from a Linux cluster machine: 
   <code>/afs/acm.uiuc.edu/admin/scripts/set-ldap-password</code> </p>
   
-  <p>Don't have a cluster account? Email <a href="mailto:admin@acm.uiuc.edu">admin@acm.uiuc.edu</a></p>
+  <p>Don't have a cluster account? Email <a href="mailto:userhelp@acm.uiuc.edu">userhelp@acm.uiuc.edu</a>
+    from your Illinois email address with the subject "Cluster Account Request"
+  </p>
 </div>
 </div>
 {% endblock %}
